# MyProject

./: .gitignore
HttpClient/: HttpClient.pro  widget.cpp  widget.h
TcpClient/: TcpClient.pro  widget.cpp  widget.h  widget.ui
TcpServer/: CMakeLists.txt
TcpServer/inc/: DatabaseManager.h  HandleImageList.h  HandleImageRequest.h  HandleImageUpload.h  HandleLogin.h  HandleRegister.h  ThreadPool.h  recvall.h
TcpServer/src/: DatabaseManager.cpp  HandleImageList.cpp  HandleImageRequest.cpp  HandleImageUpload.cpp  HandleLogin.cpp  HandleRegister.cpp  ThreadPool.cpp  recvall.cpp  tcpServer.cpp
build-TcpClient-Desktop_Qt_5_12_3_MinGW_64_bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_widget.h
build-TcpClient-Desktop_Qt_5_12_3_MinGW_64_bit-Debug/debug/: moc_widget.cpp
